--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -29,7 +29,7 @@ The schedule for the different curricula are listed here:
           {% include warning-flavor.html %}
           {% endif %}
       </td></tr>
-      <tr> <td>Evening</td> <td>END</td> </tr>
+      <tr> <td>4:30 pm</td> <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
@@ -48,7 +48,7 @@ The schedule for the different curricula are listed here:
       </tr>
       <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/sql-ecology-lesson/">Data Management with SQL</a></td></tr>
       <tr>
-	<td>Evening</td>
+	<td>4:30 pm</td>
 	<td><a href="{{ site.dc_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
       </tr>
       <tr>
